# agentic-ai-lab

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
shared/utils/: __init__.py  llm.py
week1_foundations/notebooks/: 01_getting_started.ipynb  01_lab1.ipynb  01_lab1_exercise.ipynb
